--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -1,1 +1,66 @@
-profil
+<div ng-init="init()">
+  <div class="headline-helper headline-helper--medium"></div>
+  <form>
+    
+    <div class="form-group-photo block">
+        <!-- <label for="formProfilFoto">LALA</label> -->
+        <img class="form-photo" src="img/profile.jpg" alt="profile">
+        <input id="formProfilFoto" type="hidden">
+        <button class="btn btn--photo">
+          <i class="fa fa-pencil"></i>
+        </button>
+    </div>
+    
+    <div class="box">  
+
+      <div class="form-group">
+        <div class="form-input--block">
+          <label class="form-label" for="formProfilNama">Nama</label>
+          <input class="form-trans form-input--block" id="formProfilNama" type="text" value="Andi Ersaldy Raisha Pakki">
+        </div>
+        <div class="form-option">
+          <button class="btn btn--dismiss">
+            <i class="fa fa-pencil"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="form-input--block">
+          <label class="form-label" for="formProfilEmail">Email</label>
+          <input class="form-trans form-input--block" id="formProfilEmail" type="email" value="me@ersaldyraisha.com">
+        </div>
+        <div class="form-option">
+          <button class="btn btn--dismiss">
+            <i class="fa fa-pencil"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="form-input--block">
+          <label class="form-label" for="formProfilUsia">Usia</label>
+          <input class="form-trans form-input--block" id="formProfilUsia" type="number" value="21">
+        </div>
+        <div class="form-option">
+          <button class="btn btn--dismiss">
+            <i class="fa fa-pencil"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="form-input--block">
+          <label class="form-label" for="formProfilAlamat">Alamat</label>
+          <input class="form-trans form-input--block" id="formProfilAlamat" type="text" value="Apt. Puri Park View, Jalan Raya Pesanggrahan 88, Jakarta Barat">
+        </div>  
+        <div class="form-option">
+          <button class="btn btn--dismiss">
+            <i class="fa fa-pencil"></i>
+          </button>
+        </div>
+      </div>
+
+    </div>
+  </form>
+</div>
