--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -14,37 +14,37 @@
 
   <ul class="card-grid list-nostyle">
     <li class="card-grid-item">
-      <a class="card-grid-anchor" ng-click="toggleModal('first-aid')" ng-click="toggleModal()">
+      <a class="card-grid-anchor" ng-click="toggleModal('first-aid', 'Pertolongan Pertama')">
         <img class="card-grid-img" src="img/card-grid-icon-1.png" alt="grid-item-1">
         <p class="card-grid-title">Pertolongan Pertama</p>
       </a>
     </li>
     <li class="card-grid-item">
-      <a class="card-grid-anchor" ng-click="toggleModal('unggas-saya')">
+      <a class="card-grid-anchor" ng-click="toggleModal('unggas-saya', 'Unggas Saya')">
         <img class="card-grid-img" src="img/card-grid-icon-2.png" alt="grid-item-1">
         <p class="card-grid-title">Unggas Saya</p>
       </a>
     </li>
     <li class="card-grid-item">
-      <a class="card-grid-anchor" ng-click="toggleModal('cari-dokter')">
+      <a class="card-grid-anchor" ng-click="toggleModal('cari-dokter', 'Cari Dokter')">
         <img class="card-grid-img" src="img/card-grid-icon-3.png" alt="grid-item-1">
         <p class="card-grid-title">Cari Dokter</p>
       </a>
     </li>
     <li class="card-grid-item">
-      <a class="card-grid-anchor" ng-click="toggleModal('info-harga')">
+      <a class="card-grid-anchor" ng-click="toggleModal('info-harga', 'Info Harga')">
         <img class="card-grid-img" src="img/card-grid-icon-4.png" alt="grid-item-1">
         <p class="card-grid-title">Info Harga</p>
       </a>
     </li>
     <li class="card-grid-item">
-      <a class="card-grid-anchor" ng-click="toggleModal('toko')">
+      <a class="card-grid-anchor" ng-click="toggleModal('toko', 'Toko')">
         <img class="card-grid-img" src="img/card-grid-icon-5.png" alt="grid-item-1">
         <p class="card-grid-title">Toko</p>
       </a>
     </li>
     <li class="card-grid-item">
-      <a class="card-grid-anchor" ng-click="toggleModal('layanan')">
+      <a class="card-grid-anchor" ng-click="toggleModal('layanan', 'Layanan')">
         <img class="card-grid-img" src="img/card-grid-icon-6.png" alt="grid-item-1">
         <p class="card-grid-title">Layanan Pelanggan</p>
       </a>
